<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Mobile Study</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="schedules">Schedules</string>
    <string name="title_activity_study_area">Study Area</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pick_epub">Pick Book</string>
    <string name="menu_chapters">Chapters</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="no_epub_found">No epub files Found</string>
    <string name="sd_card_not_mounted">SD card not mounted</string>
    <string name="epub_title">Title</string>
    <string name="no_book_selected">No book selected</string>
    <string name="something_is_badly_broken">Something is badly broken</string>
    <string name="end_of_book">End of book</string>
    <string name="bookmark_dialog_set_button">Set Bookmark</string>
    <string name="bookmark_dialog_goto_button">Goto Bookmark</string>
    <string name="bookmark_dialog_start_speech">Start Speech</string>
    <string name="bookmark_dialog_stop_speech">Stop Speech</string>
    <string name="options_menu_title">Options</string>
    <string name="text_to_speech_not_installed">Text To Speech not installed</string>
    <string name="table_of_contents_missing">Table of Contents not found</string>
    <string name="clear">Clear</string>
    <string name="strange">Unhandled error instance</string>
    <string name="max_duration">Maximum duration reached</string>
    <string name="max_size">Maximum file size reached</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="hint_title">Schedule Title</string>
    <string name="hint_description">Schedule Description &amp; Details</string>
    <string name="btn_save">Save</string>
    <string name="done_label">Done</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> deleted</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="select_time">Set Time</string>
    <string name="select_date">Set Date</string>
    <string name="newFileName">Untitled</string>
    <string name="onSaveMessage">File saved.</string>
    <string name="onListCleared">List of recent files cleared.</string>
    <string name="onSuggestionsCleared">List of recent searches cleared.</string>
    <string name="openRecent">Open a Recent File</string>
    <string name="accessDenied">Could not save file, Access Denied!</string>
    <string name="accessDeniedSDcard">Error saving to SD card.\nPossible causes:\n - Phone connected to PC\n - Invalid file name\n - SD card not installed\n - Out of disk space</string>
    <string name="savingError">Problem saving.\nPossible causes:\n - Invalid file name\n - Out of disk space</string>
    <string name="shouldSave">File changed. Save it?</string>
    <string name="shouldSaveIntent">You\'re opening another file. Save this one?</string>
    <string name="shouldOverwrite">You\'re about to replace an existing file.</string>
    <string name="onSendEmptyMessage">Can not send an empty untitled file.</string>
    <string name="externalModify">This file has been modified externally. Reload?</string>
    <string name="title_activity_editor">Text Editor</string>
    <string name="action_file">File…</string>
    <string name="action_send">Send</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As…</string>
    <string name="action_new">New</string>
    <string name="action_open">Open…</string>
    <string name="action_recent">Recent…</string>
    <string name="action_email_content">Email text</string>
    <string name="action_email_attachment">Email as attachment</string>
    <string name="action_send_uno">Send by Messenger</string>
    <string name="title_activity_note_home">Notes</string>
    <string name="search_string">Search…</string>
    <string name="search_detail">Search through data</string>
    <string name="edit_reminder_title">Edit Schedule Reminder</string>
    <string name="menu_insert">Add Item</string>
    <string name="task_saved_message">Task has been saved</string>
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>
    <string name="app_icon">Application Icon</string>
    <string name="menu_color_picker">Color</string>
    <string name="menu_bg_color_picker">Background Color</string>
    <string name="menu_emboss">Emboss</string>
    <string name="menu_blur">Blur</string>
    <string name="menu_erase">Erase</string>
    <string name="menu_picture_options">Picture…</string>
    <string name="menu_set_wallpaper">Set as Wallpaper</string>
    <string name="menu_clear">Clear Sheet</string>
    <string name="menu_border">Border Styles</string>
    <string name="menu_border_curve">Curved</string>
    <string name="menu_border_rectangle">Rectangle</string>
    <string name="menu_no_border">No Border</string>
    <string name="menu_set_penwidth">Set pensize</string>
    <string name="menu_save">Save</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_storage">Without this permission you can\'t insert camera pictures. Are you sure you want to deny this permission?</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_retry">Re-try</string>
    <string name="action_search">Search</string>
    <string name="pref_category_delete_key">pref_category_delete_key</string>
    <string name="pref_category_delete_title">Delete Reminders</string>
    <string name="pref_delete_reminder_key">delete_reminder</string>
    <string name="pref_delete_reminder_summary">Delete reminder after set time period</string>
    <string name="pref_delete_reminder_title">Storage Options</string>
    <string name="About">About</string>
    <string name="fn_entry">Function Entry</string>
    <string name="settings">Calculator Settings</string>
    <string name="more_functions">More Functions</string>
    <string name="help">Help</string>
    <string name="menu_functions">Plotted Functions</string>
    <string name="menu_zeros">Function Zeros (Intercepts)</string>
    <string name="menu_trace">Function Trace</string>
    <string name="menu_reset_origin">Snap to Origin (0, 0)</string>
    <string name="show_graph">Show Graph Plotter</string>
    <string name="graph_book">Graph Plotter</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit0">0</string>
    <string name="del">del</string>
    <string name="op_div">÷</string>
    <string name="op_mul">×</string>
    <string name="sqr">n\u2082</string>
    <string name="f_x">f(x)</string>
    <string name="reset">reset</string>
    <string name="trace">trace</string>
    <string name="zeros">zeros</string>
    <string name="set_bookmark">Set Bookmark</string>
    <string name="go_to_bookmark">Go to Bookmark</string>
    <string name="start_text_to_speech">Start Text To Speech</string>
    <string name="stop_text_to_speech">Stop Text To Speech</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="search">Search</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="proof">Proof</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="action_text_type">To Plain Text</string>
    <string name="bugs_and_feature">To suggest features and report bugs, contact us with the link below.</string>
    <string name="team_name">Mobile Study Developers</string>
    <string name="version_detail">1.0.0</string>
</resources>