<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_color"
        android:orderInCategory="0"
        android:title="@string/menu_color_picker"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_color_picker"/>
    <item
        android:id="@+id/menu_bg_color"
        android:orderInCategory="10"
        android:title="@string/menu_bg_color_picker"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_emboss"
        android:orderInCategory="20"
        android:title="@string/menu_emboss"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_blur"
        android:orderInCategory="10"
        android:title="@string/menu_blur"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_erase"
        android:orderInCategory="20"
        android:title="@string/menu_erase"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_penwidth"
        android:orderInCategory="15"
        android:icon="@drawable/ic_brush"
        android:title="@string/menu_set_penwidth"
        app:showAsAction="ifRoom" />
    <item
        android:orderInCategory="100"
        android:title="@string/menu_picture_options"
        android:icon="@drawable/ic_picture"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_set_wallpaper"
                android:orderInCategory="120"
                android:title="@string/menu_set_wallpaper"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_save"
                android:orderInCategory="110"
                android:title="@string/menu_save"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_clear"
                android:orderInCategory="200"
                android:title="@string/menu_clear"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:orderInCategory="100"
        android:title="@string/menu_border"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_border_curve"
                android:orderInCategory="100"
                android:title="@string/menu_border_curve"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_border_rectangele"
                android:orderInCategory="110"
                android:title="@string/menu_border_rectangle"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_no_border"
                android:orderInCategory="200"
                android:title="@string/menu_no_border"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>