<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_text_type"
        android:orderInCategory="30"
        android:title="@string/action_text_type"
        app:showAsAction="never" />
    <item
        android:orderInCategory="0"
        android:title="@string/action_file"
        android:icon="@drawable/ic_file"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_save"
                android:orderInCategory="0"
                android:title="@string/action_save"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_save_as"
                android:orderInCategory="10"
                android:title="@string/action_save_as"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_new"
                android:orderInCategory="20"
                android:title="@string/action_new"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_open"
                android:orderInCategory="30"
                android:title="@string/action_open"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_recent"
                android:orderInCategory="100"
                android:title="@string/action_recent"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:orderInCategory="10"
        android:title="@string/action_send"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_email_content"
                android:orderInCategory="10"
                android:title="@string/action_email_content"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_email_attachment"
                android:orderInCategory="20"
                android:title="@string/action_email_attachment"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_send_uno"
                android:orderInCategory="100"
                android:title="@string/action_send_uno"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="20"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />
</menu>