<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_reset"
        android:orderInCategory="0"
        android:icon="@drawable/ic_snap"
        android:title="@string/menu_reset_origin"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_functions"
        android:orderInCategory="5"
        android:title="@string/menu_functions" />
    <item
        android:id="@+id/menu_zeros"
        android:orderInCategory="10"
        android:title="@string/menu_zeros" />

    <item
        android:id="@+id/menu_trace"
        android:orderInCategory="20"
        android:title="@string/menu_trace" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="30"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/graph_help"
        android:orderInCategory="40"
        android:title="@string/help" />
</menu>
