<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_pick_epub"
        android:icon="@drawable/ic_book"
        android:orderInCategory="100"
        android:title="@string/menu_pick_epub"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_chapters"
        android:icon="@drawable/ic_list"
        android:orderInCategory="110"
        android:title="@string/menu_chapters"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_bookmark"
        android:orderInCategory="200"
        android:title="@string/menu_bookmark"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_set_bookmark"
                android:orderInCategory="100"
                android:title="@string/set_bookmark"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_goto_bookmark"
                android:orderInCategory="110"
                android:title="@string/go_to_bookmark"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_start_speech"
                android:orderInCategory="120"
                android:title="@string/start_text_to_speech"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_stop_speech"
                android:orderInCategory="130"
                android:title="@string/stop_text_to_speech"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>