<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@mipmap/ic_settings_black_36dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="20"
        android:title="@string/action_delete"
        android:icon="@mipmap/ic_delete_black_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="0"
        android:title="@string/action_share"
        android:icon="@mipmap/ic_share_black_36dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="10"
        android:title="@string/action_edit"
        android:icon="@mipmap/ic_mode_edit_black_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:title="@string/action_search"
        android:icon="@mipmap/ic_search_black_36dp"
        app:showAsAction="ifRoom" />
</menu>
