<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <net.tanozin.digiary.calculator.CalcEditText
            android:id="@+id/io"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/on_the_fly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </LinearLayout>

    <net.tanozin.digiary.calculator.EvenGridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey30"
        android:paddingBottom="@dimen/number_vertical_margin"
        android:paddingLeft="@dimen/number_horizontal_margin"
        android:paddingRight="@dimen/number_horizontal_margin"
        android:paddingTop="@dimen/number_vertical_margin"
        app:columnCount="5"
        app:rowCount="7">

        <Button
            android:id="@+id/shift"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="shift" />

        <view
            android:id="@+id/left"
            style="@style/PadButtonStyle.Operator"
            class="net.tanozin.digiary.calculator.AutoRepeatButton"
            android:background="@drawable/ic_left"
            android:text="" />

        <view
            android:id="@+id/right"
            style="@style/PadButtonStyle.Operator"
            class="net.tanozin.digiary.calculator.AutoRepeatButton"
            android:background="@drawable/ic_right"
            android:text="" />

        <Button
            android:id="@+id/del"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="@string/del" />

        <Button
            android:id="@+id/clr"
            style="@style/PadButtonStyle.Numeric"
            android:text="AC"
            android:textColor="#AA0000" />

        <Button
            android:id="@+id/ln"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="ln" />

        <Button
            android:id="@+id/seven"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit7" />

        <Button
            android:id="@+id/eight"
            style="@style/PadButtonStyle.Numeric"
            android:layout_marginTop="3dp"
            android:text="@string/digit8" />

        <Button
            android:id="@+id/nine"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit9" />

        <Button
            android:id="@+id/plus"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="+" />


        <Button
            android:id="@+id/pwr"
            style="@style/PadButtonStyle.Numeric"
            android:text="^" />

        <Button
            android:id="@+id/four"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit4" />

        <Button
            android:id="@+id/five"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit5" />

        <Button
            android:id="@+id/six"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit6" />

        <Button
            android:id="@+id/minus"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="-" />


        <Button
            android:id="@+id/sqr"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="@string/sqr" />

        <Button
            android:id="@+id/one"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit1" />

        <Button
            android:id="@+id/two"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit2" />

        <Button
            android:id="@+id/three"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit3" />

        <Button
            android:id="@+id/mult"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="@string/op_mul"
            android:textSize="22sp" />


        <Button
            android:id="@+id/E"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="E"
            android:textSize="21sp" />

        <Button
            android:id="@+id/point"
            style="@style/PadButtonStyle.Numeric"
            android:layout_weight="0.195"
            android:text="."
            android:textSize="24sp" />

        <Button
            android:id="@+id/zero"
            style="@style/PadButtonStyle.Numeric"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/digit0" />

        <Button
            android:id="@+id/sign"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="0.195"
            android:text="(-)"
            android:textSize="18sp" />

        <Button
            android:id="@+id/div"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="0.195"
            android:text="@string/op_div"
            android:textSize="22sp" />


        <Button
            android:id="@+id/recip"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="1/x"
            android:textSize="17sp" />

        <Button
            android:id="@+id/lParen"
            style="@style/PadButtonStyle.Numeric"
            android:text="("
            android:textSize="22sp" />

        <Button
            android:id="@+id/rParen"
            style="@style/PadButtonStyle.Numeric"
            android:text=")"
            android:textSize="22sp" />

        <Button
            android:id="@+id/equals"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="0.4"
            android:text="="
            android:textSize="30sp" />


        <Button
            android:id="@+id/pie"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="1"
            android:text="pi"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sin"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="sin"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cos"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="1"
            android:text="cos"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tan"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="1"
            android:text="tan"
            android:textSize="18sp" />

        <Button
            android:id="@+id/copy"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="1"
            android:text="copy"
            android:textSize="16sp" />

        <Button
            android:id="@+id/ans"
            style="@style/PadButtonStyle.Operator.Text"
            android:layout_weight="1"
            android:text="ans"
            android:textSize="18sp" />

    </net.tanozin.digiary.calculator.EvenGridLayout>

</LinearLayout>
