<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <view
        android:id="@+id/graph"
        class="net.tanozin.digiary.calculator.GraphView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="vertical" />

    <net.tanozin.digiary.calculator.EvenGridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:columnCount="4"
        app:rowCount="1">

        <Button
            android:id="@+id/graph_fns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="@string/f_x" />

        <Button
            android:id="@+id/graph_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="@string/reset" />

        <Button
            android:id="@+id/graph_trace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trace"
            style="@style/PadButtonStyle.Operator.Text"/>

        <Button
            android:id="@+id/graph_zeros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PadButtonStyle.Operator.Text"
            android:text="@string/zeros" />
    </net.tanozin.digiary.calculator.EvenGridLayout>
</LinearLayout>
